--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,7 +7,7 @@
   }
 
   body {
-    @apply font-regular text-text-090;
+    @apply font-regular text-main-010;
     box-sizing: border-box;
     -ms-overflow-style: none;
     overscroll-behavior-y: contain;
